--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "handlebars": "^4.0.10",
     "hbsfy": "^2.7.0",
     "jquery": "^3.2.1",
+    "lodash.capitalize": "^4.2.1",
     "matchdep": "^1.0.1"
   }
 }
